--- a/notebooks/single_modality/H3K4me3_rename_clusters.Rmd
+++ b/notebooks/single_modality/H3K4me3_rename_clusters.Rmd
@@ -77,7 +77,7 @@ DimPlot(seurat,label=TRUE) + NoLegend()
 ```
 
 
-```{r helper, fig.width=10,fig.height=4, eval=FALSE}
+```{r, fig.width=10,fig.height=4,eval=FALSE}
 seurat.H3K27ac <- readRDS(file=paste0(params$out_prefix,'/single_modality/','H3K27ac','/seurat/',params$feature,'/Seurat_object_clustered_renamed.Rds'))
 
 idents <- seurat.H3K27ac@active.ident[colnames(seurat)]
@@ -91,8 +91,8 @@ p1+p2
 
 
 
-```{r rename_L1,fig.width=8,fig.height=4}
-idents_L1 <- c(
+```{r,fig.width=8,fig.height=4}
+idents_global <- c(
   '0' = 'Vascular',
   '1' = 'Astroependymal',
   '2' = 'Astroependymal',
@@ -110,50 +110,19 @@ idents_L1 <- c(
   '14' = 'Olfactory ensheating cells',
   '15' = 'Neurons'
 )
-seurat.renamed                 <- RenameIdents(seurat,idents_L1)
-seurat.renamed$idents_L1       <- seurat.renamed@active.ident
+seurat.renamed                 <- RenameIdents(seurat,idents_global)
+seurat.renamed$global_idents   <- seurat.renamed@active.ident
 seurat.renamed                 <- SetIdent(seurat.renamed,cells = names(seurat.renamed$seurat_clusters), value = seurat.renamed$seurat_clusters)
 
-p1 <- DimPlot(seurat.renamed,label=TRUE,repel = TRUE, group.by = 'idents_L1') + NoLegend()
-p2 <- DimPlot(seurat.renamed,label=TRUE,repel = TRUE, group.by = 'seurat_clusters') + NoLegend()
+p1 <- DimPlot(seurat.renamed,label=TRUE,group.by = 'global_idents') + NoLegend()
+p2 <- DimPlot(seurat.renamed,label=TRUE, group.by = 'seurat_clusters') + NoLegend()
 
 p1+p2
 ```
 
 
-```{r rename_L2, fig.width=8, fig.height=4}
-idents_L2 <- c(
-    '0' = 'Vascular endothelialal cells',
-    '1' = 'Astrocytes',
-    '2' = 'Astrocytes',
-    '3' = 'Neurons',
-    '4' = 'Oligodendrocytes',
-    '5' = 'Microglia',
-    '6' = 'Immature neurons',
-    '7' = 'Choroid-ependymal cells',
-    '8' = 'Vascular leptomeningeal cells',
-    '9' = 'Neurons',
-    '10' = 'Bergmann glia',
-    '11' = 'Microglia',
-    '12' = 'Immature Oligodendrocytes',
-    '13' = 'Radial glia',
-    '14' = 'Olfactory ensheating cells',
-    '15' = 'Immature neurons')
-
-seurat.renamed                <- RenameIdents(seurat.renamed,idents_L2)
-seurat.renamed$idents_L2      <- seurat.renamed@active.ident
-seurat.renamed                <- SetIdent(seurat.renamed,cells = names(seurat.renamed$seurat_clusters), value = seurat.renamed$seurat_clusters)
-
-p1 <- DimPlot(seurat.renamed,label=TRUE,group.by = 'idents_L1',repel = TRUE) + NoLegend()
-p2 <- DimPlot(seurat.renamed,label=TRUE,group.by = 'idents_L2',repel = TRUE) + NoLegend()
-p3 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='seurat_clusters',label.size = 2.5) + NoLegend()
-
-
-p1+p2+p3
-```
-
-```{r rename_L3, fig.width=8, fig.height=4}
-idents_L3 <- c(
+```{r rename, fig.width=8, fig.height=4}
+idents <- c(
     '0' = 'Vascular endothelialal cells',
     '1' = 'Telencephalon Astrocytes',
     '2' = 'Non-telencephalon Astrocytes',
@@ -171,17 +140,15 @@ idents_L3 <- c(
     '14' = 'Olfactory ensheating cells',
     '15' = 'Neuroblast_2')
 
-seurat.renamed                <- RenameIdents(seurat.renamed,idents_L3)
-seurat.renamed$idents_L3      <- seurat.renamed@active.ident
-seurat.renamed                <- SetIdent(seurat.renamed,cells = names(seurat.renamed$seurat_clusters), value = seurat.renamed$seurat_clusters)
-
-p1 <- DimPlot(seurat.renamed,label=TRUE,group.by = 'idents_L1',repel = TRUE) + NoLegend()
-p2 <- DimPlot(seurat.renamed,label=TRUE,group.by = 'idents_L2',repel = TRUE) + NoLegend()
-p3 <- DimPlot(seurat.renamed,label=TRUE,group.by = 'idents_L3',repel = TRUE) + NoLegend()
-p4 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='seurat_clusters',label.size = 2.5) + NoLegend()
+seurat.renamed                <- RenameIdents(seurat.renamed,idents)
+seurat.renamed$cluster_idents <- seurat.renamed@active.ident
 
 
-p1+p2+p3+p4
+p1 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='global_idents', label.size = 2.5) + NoLegend()
+p2 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,label.size = 2.5) + NoLegend()
+p3 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='seurat_clusters',label.size = 2.5) + NoLegend()
+
+p1+p2+p3
 ```
 
 ```{r}
