--- a/notebooks/single_modality/ATAC_rename_clusters.Rmd
+++ b/notebooks/single_modality/ATAC_rename_clusters.Rmd
@@ -11,7 +11,7 @@ params:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-```   
+```
 
 
 ```{r libraries}
@@ -34,33 +34,33 @@ UMAP_and_cluster <- function(seurat_object, assay, ndim = 50, output = 'seurat_o
     seurat_object$modality <- 'Unknown'
   }
   modality <- unique(seurat_object$modality)
-  
+
   seurat_object <- RunTFIDF(seurat_object)
   seurat_object <- FindTopFeatures(seurat_object)
-  
+
   seurat_object <- RunSVD(
     object = seurat_object,
     assay = assay,
     reduction.name = 'lsi'
   )
-  
+
   p.depthcor <- DepthCor(seurat_object)
   ggsave(filename = paste0(dirname(output),'/',modality,'_',assay,'_depthcor.png'),width=4,height=4)
-  
+
   dims          <- c(2:ndim)
-  
+
   seurat_object <- RunUMAP(
     object = seurat_object,
     reduction = 'lsi',
     dims = dims
   )
-  
+
   seurat_object <- FindNeighbors(
     object = seurat_object,
     reduction = 'lsi',
     dims = dims
   )
-  
+
   seurat_object <- FindClusters(
     object = seurat_object,
     algorithm = 3,
@@ -68,7 +68,7 @@ UMAP_and_cluster <- function(seurat_object, assay, ndim = 50, output = 'seurat_o
     verbose = FALSE
   )
   return(seurat_object)
- 
+
 }
 
 seurat <- UMAP_and_cluster(seurat_object = seurat,assay = 'peaks',ndim=25)
@@ -77,7 +77,7 @@ DimPlot(seurat,label=TRUE) + NoLegend()
 ```
 
 
-```{r helper, fig.width=10,fig.height=4, eval=FALSE}
+```{r helper, fig.width=24,fig.height=8, eval=FALSE}
 seurat.H3K27ac <- readRDS(file=paste0(params$out_prefix,'/single_modality/','H3K27ac','/seurat/',params$feature,'/Seurat_object_clustered_renamed.Rds'))
 
 idents <- seurat.H3K27ac@active.ident[colnames(seurat)]
@@ -91,7 +91,7 @@ p1+p2
 
 
 
-```{r rename_L1,fig.width=8,fig.height=4}
+```{r rename_L1,fig.width=24,fig.height=8}
 idents_L1 <- c(
   '0' = 'Vascular',
   '1' = 'Astroependymal',
@@ -121,7 +121,7 @@ p1+p2
 ```
 
 
-```{r rename_L2, fig.width=8, fig.height=4}
+```{r rename_L2, fig.width=24, fig.height=8}
 idents_L2 <- c(
     '0' = 'Vascular endothelialal cells',
     '1' = 'Astrocytes',
@@ -152,7 +152,7 @@ p3 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='seurat_clusters',la
 p1+p2+p3
 ```
 
-```{r rename_L3, fig.width=8, fig.height=4}
+```{r rename_L3, fig.width=24, fig.height=8}
 idents_L3 <- c(
     '0' = 'Vascular endothelialal cells',
     '1' = 'Telencephalon Astrocytes',
@@ -183,6 +183,17 @@ p4 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='seurat_clusters',la
 
 p1+p2+p3+p4
 ```
+
+
+```{r}
+lapply(c('idents_L1','idents_L2','idents_L3','seurat_clusters'),function(x){
+  p1 <- DimPlot(seurat.renamed, label=TRUE,group.by=x,repel=TRUE) + NoLegend()
+  ggsave(plot=p1, filename=paste0(params$out_prefix,'/single_modality/',params$modality,'/seurat/',params$feature,'/Seurat_UMAP_',x,'.pdf'),width=12,height=12)
+})
+
+```
+
+```{r}
 
 ```{r}
 saveRDS(object = seurat.renamed, file = paste0(params$out_prefix,'/single_modality/',params$modality,'/seurat/',params$feature,'/Seurat_object_clustered_renamed.Rds'))
