--- a/notebooks/single_modality/H3K27ac_rename_clusters.Rmd
+++ b/notebooks/single_modality/H3K27ac_rename_clusters.Rmd
@@ -25,7 +25,7 @@ seurat <- readRDS(file=paste0(params$out_prefix,'/single_modality/',params$modal
 ```
 
 
-```{r,fig.width=6,fig.height=6}
+```{r,fig.width=24,fig.height=8}
 idents_L1 <- c(
   '0' = 'Astroependymal',
   '1' = 'Astroependymal',
@@ -71,7 +71,7 @@ p1+p2
 
 
 
-```{r rename_L2, fig.width=8, fig.height=4}
+```{r rename_L2, fig.width=24,fig.height=8}
 idents_L2 <- c(
     '0' = 'Astrocytes',
     '1' = 'Astrocytes',
@@ -119,7 +119,7 @@ p1+p2+p3
 
 
 
-```{r rename_L3, fig.width=8, fig.height=4}
+```{r rename_L3, fig.width=24,fig.height=8}
 idents_L3 <- c(
     '0' = 'Telencephalon Astrocytes',
     '1' = 'Non-Telencephalon Astrocytes',
@@ -164,6 +164,14 @@ p3 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='idents_L3', label.s
 p4 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='seurat_clusters',label.size = 2.5) + NoLegend()
 
 p1+p2+p3+p4
+```
+
+```{r}
+lapply(c('idents_L1','idents_L2','idents_L3','seurat_clusters'),function(x){
+  p1 <- DimPlot(seurat.renamed, label=TRUE,group.by=x,repel=TRUE) + NoLegend()
+  ggsave(plot=p1, filename=paste0(params$out_prefix,'/single_modality/',params$modality,'/seurat/',params$feature,'/Seurat_UMAP_',x,'.pdf'),width=12,height=12)
+})
+
 ```
 
 ```{r}
